# Abaqus-simulator

./: CMakeLists.txt  README.md
doc/: Doxyfile.in  mainpage.dox
src/: exp.glade
src/SimScripts/: abaqus_read_odb.py  beam.py  simulation.sh
src/client/: client.c  myclient.h  myfclient.c  prototypes.h
src/mainsrc/: callbacks.c  gui.c  main.c  manager.c  myf.c  myf.h  prototypes.h
src/server/: auxfuncs.c  myserver.h  prototypes.h  server.c
srcmyutils/: mystring.c  myutils.h  pcolor.c  prototypes.h  tictoc.c
